# deskpet

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  RELEASE_NOTES.md  electron-builder.yml  electron.vite.config.ts  package-lock.json  package.json  tsconfig.node.json  tsconfig.web.json  vite.config.ts
scripts/: generate-assets.cjs  generate-icon.cjs  slice-sprites.cjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  metrics.rs  settings.rs  win.rs
src/main/: cpuMonitor.ts  main.ts  store.ts  taskbar.ts  tray.ts  win32.ts
src/preload/: preload.d.ts  preload.ts
src/renderer/: App.tsx  Pet.tsx  Readout.tsx  SettingsApp.tsx  appearance.ts  index.html  petAssets.ts  readout.css  settings.css  settings.html  settings.tsx  styles.css  tauri.ts
src/renderer/hooks/: useAnimation.ts
src/shared/: ipc.ts  types.ts
